cabal-version:      3.0
name:               onory
version:            0.1.0.0
synopsis:           An eDSL for specifying executable distributed algorithms and systems
description:
                    Onory is a high-level language embedded in Haskell for
                    specifying distributed algorithms/systems using common
                    notation seen accross papers in the area. The built-in
                    interpreter enables a distributed system specified in Onory
                    to be compiled to an executable node.
                    
                    Being able to execute the high-level specification of a
                    distributed protocol allows faster iteration and
                    observability during the development of existing, or novel,
                    protocols. Moreover, the executable derived from the
                    specification is automatically able to parse protocol
                    configuration options from the command line interface, and
                    trace all events being triggered and handled by the running
                    protocol.
                    
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
homepage:           https://github.com/alt-romes/onory
bug-reports:        https://github.com/alt-romes/onory/issues
tested-with:        GHC == 9.8.2, GHC == 9.4.8
copyright:          Copyright (C) 2024 Rodrigo Mesquita
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/alt-romes/onory

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  System.Distributed.Prelude, System.Distributed.Core, System.Distributed.Interpret, System.Distributed.Free
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.17 && < 4.20,
        binary >= 0.8.9 && < 0.9,
        bytestring >= 0.12.1 && < 0.13,
        constraints >= 0.14.2 && < 0.15,
        containers >= 0.6.8 && < 0.7,
        free >= 5.2 && < 5.3,
        mtl >= 2.3.1 && < 2.4,
        network >= 3.1.4 && < 3.2,
        network-transport >= 0.5.7 && < 0.6,
        network-transport-tcp >= 0.8.3 && < 0.9,
        optparse-applicative >= 0.18.1 && < 0.19,
        optparse-generic >= 1.5.2 && < 1.6,
        random >= 1.2.1 && < 1.3,
        text >= 2.1.1 && < 2.2,
        time >= 1.12.2 && < 1.13,
    hs-source-dirs:   src
    default-language: GHC2021

executable psimulate
    import:           warnings
-- romes:todo: do I have to compile with -threaded?
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, containers,
        onory

    hs-source-dirs:   app
    default-language: GHC2021

test-suite onory-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        onory
