cabal-version:      3.0
name:               pseudo-asd
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Rodrigo Mesquita
maintainer:         rodrigo.m.mesquita@gmail.com
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  System.Spec, System.Spec.Free
    -- other-modules:
    -- other-extensions:
    -- We depend on GHC 9.10 since we use visible forall in types of terms.
    build-depends:    base >= 4.19, free, containers
    hs-source-dirs:   src
    default-language: GHC2021

executable psimulate
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, containers,
        pseudo-asd

    hs-source-dirs:   app
    default-language: GHC2021

test-suite pseudo-asd-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base,
        pseudo-asd
